# WinBTsink

./: .gitignore  BT-AudioSink.spec  LICENSE  README.md  build.ps1  requirements.txt  start.bat
btstack/: CMakeLists.txt  btstack_config.h  btstack_sink.c  build.ps1  do_build.sh
btstack/patches/: apply_avdtp_patch.py
setup/: install.ps1
src/: backend.py  gui.py  winusb_installer.py
